Tightening up language in the introduction

--- a/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/1-1_computer-vision-primer.tex
@@ -1,4 +1,4 @@
-In order to more fully understand the process of extracting total knee arthroplasty kinematics from single-plane digital fluoroscopic images, we must first explore some fundamentals of computer vision, specifically elements of image formation, image processing, and object projection.
+To more fully comprehend the process of extracting TKA kinematics from single-plane fluoroscopic images, a brief overview of some fundamentals of computer vision is provided, specifically image formation, image processing, and object projection.
 
 \subsection{Geometric Transformations}
 \label{sec:geometric-transformations}
