--- a/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-formation-and-cameras.tex
@@ -81,7 +81,7 @@ Multiplying the perspective projection matrix by the pixel scale factor yields a
 \end{equation}
 
 
-To generate a simple binary rasterization of the image, the space between projected points is interpolated and filled in, resulting in a binary "shadow" of the object on the image plane.
+To generate a simple binary rasterization of the image, the space between projected points is interpolated and filled in, resulting in a binary ``shadow'' of the object on the image plane.
 While more comprehensive image formation entails coloring, shading, and ray tracing, such complexity is unnecessary for the purpose of model-image registration of implant geometries in fluoroscopic images, and thus will not be addressed.
 
 %%% Local Variables:
