--- a/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
@@ -118,7 +118,7 @@ These include steerable filters, which determine information occurring in arbitr
 \subsubsection{Edge detection}
 Edge detection is a highly motivated sub-field of image processing in computer vision due to the immense usefulness of algorithmically determining the edges in a given image.
 While human operators might find it relatively straightforward to pinpoint edges of interest, the challenge lies in achieving this computationally.
-An initial strategy involves interpreting an image topographically, where regions of varying colors and intensities are depicted as differing "heights".
+An initial strategy involves interpreting an image topographically, where regions of varying colors and intensities are depicted as differing ``heights''.
 Consequently, an edge is identified as an area exhibiting a steep gradient (Equation \ref{eq:img-grad}).
 
 \begin{equation}
