--- a/src/aim4-shape-sensitivity/new-metrics.tex
+++ b/src/aim4-shape-sensitivity/new-metrics.tex
@@ -179,7 +179,7 @@ Regions of the highest curvature were then represented as peaks along the plot (
 
 To programmatically extract regions with high curvature, two steps were undertaken.
 Initially, curvature values were filtered to exclude those where $c_{i} \le \mu_{curvature} + 1.5\sigma_{curvature}$, ensuring the selection of only high curvature points.
-Subsequently, inflection points of the first derivative were identified to locate regions where the curvature transitioned from a positive to a negative derivative, indicative of the "peak" of that curvature region.
+Subsequently, inflection points of the first derivative were identified to locate regions where the curvature transitioned from a positive to a negative derivative, indicative of the ``peak'' of that curvature region.
 The points identified by this algorithm correspond precisely to the points where the specific contour exhibits the highest curvature, aligning with the regions that human operators intuitively identified as high curvature areas.
 
 
